# CS2ServerGUI

./: .gitmodules  CMakeLists.txt  build.bat  xmake.lua
scripts/: build-cmake.bat  build-xmake.bat
src/: ehandle_impl.cpp  extension.cpp
src/cs2_sdk/: schema.cpp
src/imgui/panels/entitybrowser/: type_stringifier.cpp
